<resources>
    <string name="app_name">Layout Type</string>
    <string name="lesson1">lesson1</string>
    <string name="this_is_textview">This is TextView!</string>
    <string name="this_is_table_view">This is Table View!</string>
    <string name="new_life_for_mirea_activity">New life for mirea activity!</string>
    <string name="button1">Button1</string>
    <string name="button2">Button2</string>
    <string name="button3">Button3</string>
    <string name="button4">Button4</string>
    <string name="button5">Button5</string>
    <string name="button6">Button6</string>
</resources>